--- a/css/privacy.css
+++ b/css/privacy.css
@@ -7,8 +7,8 @@ body {
 }
 
 .header {
-    background-color: #2980b9;
-    color: white;
+    background-color: white;
+    color: black;
     padding: 20px 0;
     text-align: center;
 }
