--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ body {
 .job-openings iframe {
     border: none;
     width: 100%;
-    height: 500px;
+    height: 100%;
     margin-top: 20px;
 }
 
